Fixed the part of the game that displays status messages about the game so that it always takes up the height required for all the info, even if the info is not showing atm. This way it looks neater. Also fixed the background div so that i always takes up 100vh

--- a/task1/styles.css
+++ b/task1/styles.css
@@ -14,19 +14,21 @@
   overflow: hidden;
   justify-content: center;
   align-items: center;
-  align-content: center;
   background: url(assets/chalkboard.png);
   background-repeat: repeat-y;
   background-size: cover;
-  padding: 5rem;
+  padding: 2rem;
+  height: 100vh;
 }
 
 h1 {
   font-size: 60px;
+  text-align: center;
 }
 
 h2 {
   font-size: 50px;
+  text-align: center;
 }
 
 i.main {
@@ -82,10 +84,10 @@ i:hover {
   grid-template-columns: repeat(3, auto);
   width: 300px;
   margin: auto;
-  padding: 2rem;
+  padding: 1rem;
 }
 
-#game-status {
+#game-info {
   height: 250px;
 }
 
